--- a/M17E_INTRO_12H/Web.config
+++ b/M17E_INTRO_12H/Web.config
@@ -6,7 +6,8 @@
 <configuration>
   <system.web>
     <compilation debug="true" targetFramework="4.8.1" />
-    <httpRuntime targetFramework="4.8.1" />
+	  <!--Limite em KB do tamanho dos pedidos-->
+    <httpRuntime maxRequestLength="51200" targetFramework="4.8.1" />
   </system.web>
   <system.codedom>
     <compilers>
