--- a/M17E_INTRO_12H/M17E_INTRO_12H.csproj
+++ b/M17E_INTRO_12H/M17E_INTRO_12H.csproj
@@ -67,9 +67,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\bd_intro_12h.mdf" />
+    <Content Include="App_Data\bd_intro_12h_log.ldf">
+      <DependentUpon>bd_intro_12h.mdf</DependentUpon>
+    </Content>
     <Content Include="compra.aspx" />
     <Content Include="cookies.aspx" />
     <Content Include="index.aspx" />
+    <Content Include="Login.aspx" />
+    <Content Include="public\css\estilos.css" />
     <Content Include="resultado.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -95,6 +101,20 @@
     <Compile Include="index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MasterPage.Master.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterPage.Master.designer.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="resultado.aspx.cs">
       <DependentUpon>resultado.aspx</DependentUpon>
@@ -105,6 +125,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="MasterPage.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
