--- a/M17E_INTRO_12H/Web.config
+++ b/M17E_INTRO_12H/Web.config
@@ -4,6 +4,12 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<appSettings>
+		<!-- Não ENVIAR PARA O GIT -->
+		<add key="Google.ReCaptcha.Secret" value="6LcSlmUsAAAAABH2Rdn0zsCXsfWlQMtIy2ufon6a"/>
+		<add key="email" value="177ea5fa4fc2e4"/>
+		<add key="email_password" value="15d43a8a5cb5f7"/>
+	</appSettings>
 	<connectionStrings>
 		<add name="sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\bd_intro_12h.mdf;Integrated Security=True"/>
 	</connectionStrings>
