--- a/M17E_INTRO_12H/M17E_INTRO_12H.csproj
+++ b/M17E_INTRO_12H/M17E_INTRO_12H.csproj
@@ -79,6 +79,7 @@
     <Content Include="Login.aspx" />
     <Content Include="public\css\estilos.css" />
     <Content Include="public\js\codigo.js" />
+    <Content Include="recuperarpassword.aspx" />
     <Content Include="resultado.aspx" />
     <Content Include="script_bd.sql" />
     <Content Include="Utilizador\Codigo\EditarUtilizador.aspx" />
@@ -142,6 +143,13 @@
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="recuperarpassword.aspx.cs">
+      <DependentUpon>recuperarpassword.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="recuperarpassword.aspx.designer.cs">
+      <DependentUpon>recuperarpassword.aspx</DependentUpon>
+    </Compile>
     <Compile Include="resultado.aspx.cs">
       <DependentUpon>resultado.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
