--- a/M17E_INTRO_12H/Web.config
+++ b/M17E_INTRO_12H/Web.config
@@ -6,9 +6,11 @@
 <configuration>
 	<appSettings>
 		<!-- Não ENVIAR PARA O GIT -->
-		<add key="Google.ReCaptcha.Secret" value="6LcSlmUsAAAAABH2Rdn0zsCXsfWlQMtIy2ufon6a"/>
-		<add key="email" value="177ea5fa4fc2e4"/>
-		<add key="email_password" value="15d43a8a5cb5f7"/>
+		<add key="Google.ReCaptcha.Secret" value="istojánãofunciona"/>
+		<add key="email" value="istojánãofunciona"/>
+		<add key="email_password" value="istojánãofunciona"/>
+		<add key="servidor_smtp" value="sandbox.smtp.mailtrap.io"/>
+		<add key="porta" value="2525"/>
 	</appSettings>
 	<connectionStrings>
 		<add name="sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\bd_intro_12h.mdf;Integrated Security=True"/>
